--- a/report.tex
+++ b/report.tex
@@ -184,61 +184,60 @@ The training of the models and the experiments were performed on a virtual machi
 
 \subsection{Implementation Details}\label{ImplDet}
 
-Per tutte le reti abbiamo testato le performance per diversi valori di LR, cioè da 10allameno2 a 10allameno5. Per ognuna di esse abbiamo riscontrato che lr=10allameno3 è il valore che permette di convergere più velocemente al miglior risultato e quindi tutti gli esperimenti riportati in questa sezione fanno riferimento a questo valore di lr. In tabella ?? riportiamo le performance di Resnext al variare di tale valore.
+For each CNN, we tested their performance for different learning rate values ($10^{-2}, 10^{-3}, 10^{-4}, 10^{-5}$). We have observed that $10^{-3}$ is the value which allows to converge faster to the best results, thus all experiments shown use this learning rate value.\\
+In table \textbf{??} we report ResNeXt 's performance on all those values.
 
 We chose the Adam's update rule because the experiments using SGD were worse. \textbf{Abbiamo impostato il }learning rate $= 10^{-3}$ mentre per gli altri papametri we used the default ones, i.e. $\beta_{1}  = 0.9$ and $\beta_{2} = 0.999$.  \textbf{MA COSA SONO beta1 e BETA2}\\
 
-In transfer learning training, we set the number of epochs and the batch size to 15 and 32 respectively.  For each model chosen, pytorch makes available the final weights of these models trained on the ImageNet dataset (\cite{imagenet}), which makes transfer learning very easy to exploit.\\
-\textbf{We first start training the network updating the weights only in the FC-layers, ma i risultati ottenuti non erano buoni}.\\
-With the aim of achieving higher accuracy, \textbf{come sperimentato} in \cite{ArtistIdCNN406}, we have decided to allow the update of the weights in the whole network if, for 3 consecutive epochs, the validation set's accuracy does not improve by 3 percentage points. When this condition occurs, learning rate is decreased by a factor of 10. This strong decrease is motivated by the fundamental idea of the use of transfer learning: it is assumed that the pre-trained weights are already "close" or enough good to those we are looking for, so it is good to search for them with a relatively small step-size.
+In transfer learning training, we set the number of epochs and the batch size to 16 and 32 respectively.  For each model chosen, pytorch makes available the final weights of these models trained on the ImageNet dataset (\cite{imagenet}), which makes transfer learning very easy to exploit.\\
+We first start training the network updating the weights only in the FC-layers, but the results obtained weren't good.\\
+With the aim of achieving higher accuracy, as experimented in \cite{ArtistIdCNN406}, we have decided to allow the update of the weights in the whole network if, for 3 consecutive epochs, the validation set's accuracy does not improve by 3 percentage points. When this condition occurs, learning rate is decreased by a factor of 10. This strong decrease is motivated by the fundamental idea in using transfer learning: it is assumed that the pre-trained weights are already "close" or enough good to those we are looking for, so it is good to search for them with a relatively small step-size.
 \\
 
-In training from scratch, the number of epochs was set to 20, while the batch size remained 32.\\ 
-Initialisation of the weights follows a uniform distribution in $[-x, x]$ where $x=1/\sqrt n$ and $n$ is the number of inputs to a given neuron (\textbf{STA COSA È DA VERIFICARE})\\
+In training from scratch, the number of epochs was set to 21, while the batch size was still 32.\\ 
+Weights' nitialisation follows a uniform distribution in $[-x, x]$ where $x=1/\sqrt n$ and $n$ is the number of inputs to a given neuron (\textbf{STA COSA È DA VERIFICARE})\\
 We have experimented what in pytorch is called \textit{scheduler}, i.e. every 7 epochs the learning rate is decreased by a factor of 10 . This strategy, however, has not led to improvements and in fact the results exposed have been obtained without the use of this technique.
 
 \subsection{Evaluation metrics}
-Per valutare le nostre reti abbiamo calcolato la top-1 accuracy, ossia quando un quadro viene classificato del pittore esatto, e la top-3 accuracy, ossia un quadro viene classificato correttamente se il suo autore e' compreso tra i 3 risultati con highest score generato dalla rete.
+In order to evaluate all the models that we study, we calculated their top-1 accuracy, which is when a paint is classified with its author, and top-3 accuracy, aka a paint is classified correctly when its author is one of the 3 artist to whom the model has assigned the highest scores.\\
+Finally, we have compared our results with those in \textbf{CIT??}, which is/are the most related works with ours. 
 
-Infine i risulati ottenuti, oltre a confoirntarli tra di loro, li abbiamo conforntati con [mettere citazione], che e' il lavoro piu simile al nostro.
+The most significant results are reported in \ref{results}.
 
-I riosultati piu' interessanti sono stati riportati sottoforma di grafico o tabella nella prossima sezione results.
+\subsection{Results}\label{results}
 
-\subsection{Results}\mbox{}\\
+In table \textbf{??} we report the overall results obtained for each CNN, both as regards training with transfer learning and the one from scratch, including in it the results obtained in \cite{ArtistIdCNN406} and \textbf{altri.}...
 
-La tabella X contiene i risultati complessivi ottenuti per le varie reti, sia per quanto riguarda il training from scratch (left) che per l'allenamento with transfer learning (right), comprendendo anche il riferimento ai rusultati di \cite{ArtistIdCNN406}.\\
-Il primo aspetto che possiamo notare, confrontando le nostre 3 reti, e' che AlexNet ottiene performance nettamente peggiori in tutti gli esperimenti, questo ci fa capire come effettivamente la complessita', profondita' crescente della rete permetta di raggiungere risultati migliori, cosa che ci si aspettava.
-In particolare, nell'allenamento from scratch essa ottiene un 20\% in meno di accuracy, rispetto le altre reti, che diventa circa un 10\% di media nel transfer learning, dimostrando come il transfer learning sia un ottima tecnica per ottenere rislutati discereti anche con reti non troppo complesse (87\% di top-3 accuracy nel test set).
+The first thing with we see, comparing the CNNs, is that AlexNet's performance are much worse than other CNNs for all experiments, thus we can deduce how network's complexity allows to achieve better results. In fact, GoogLeNet and ResNeXt are successors of AlexNet, so this results should not be surprising. 
+In particular, in training from scratch, AlexNet is 20 percentage points worse than others CNNs, and in training with transfer learning this distance is halved. This result show that transfer learning performs very well in order to achieve discreet results even with not so complex networks. Indeed, AlexNet has obtained 87\% of top-3 accuracy in the test set.
 
-SCRATCH-LEARNING
-Per tutte le reti possiamo notare come l'allenamento with tl ottiene risutalti circa 40\% migliori rispetto al from scratch. Questo ci fa capire come il pre-trained su imagenet, dataset molto piu ampio del nostro, sia un ottimo punto di partenza e che quindi i task di image classification e artist identification si assomiglino. RIGUARDARE \textit{a feature representation from ImageNet is a valuable starting point for artist identification. }
+For all the networks, we can see how training with transfer learning achieved results with 40 percentage points more than training from scratch. So, we can figure out that CNNs already trained on ImageNet dataset, which is wider than ours,  are a valuable starting point for artist identification and thus image classification and artist identification are tasks at least partially overlapped. \textbf{da riguardare}\\
+The most performing CNN is ResNeXt trained with transfer learning. Its top-1 accuracy reaches 80\% on test set, while its top-3 accuracy is roughly 93\%. This mean that it can narrow down the artist to three in the vast majority of cases.
 
-La nostra rete migliore risulta quindi essere Resnext with transfer learning, raggiungegngo un ottimo 80\% di top-1 accuraci e 93 nella top-3, meaning that it can narrow down the artist to three in the vast majority
-of cases. 
+Figure \ref{fig:confusion} shows the confusion matrix concerning ResNeXt's classification. Each row represents the true artist and each column represents a predicted artist. Ideally, we want as many predictions as possible to be concentrated on the diagonal as this means that the network correctly predicted the true artist. The maximum possible value for a cell in the confusion matrix is 45, since there are 45 paintings per artist in the dataset.\\
+In general, we can easily see how the majority of artifacts are well-classified thanks to the hottest colours on the diagonal cell, i.e. more than 30 paints are well classified to 45. \textbf{rivedere}
 
+In particular, the artits better classified (44 to 45) are Eugene Bodin, Ivan Aivazovsky and Raphael Kirchner. In fact, even though these artists may belong to differents artistic movements and styles, they've always paints in a manner that depicts the world very close to reality (\textbf{figura ?? show some example}).\\
+For example, Ivan Aivazovsky produced many portraits and landscapes, over half of all of his paintings are realistic depictions of coastal scenes and seascapes. \\
+The manner of painting real scenario or objects makes artist classification very similar to image classification. Indeed, form our results we note that artists with this characteristic obtained an higher accuracy.
 
-CONFUSION MATRIX 
-Figure 4 shows a confusion matrix. Each row represents the true artist and each column represents a predicted artist. Ideally, we want as many predictions as possible to be concentrated on the diagonal as this means that the network correctly predicted the true artist. The maximum possible value for a cell in the confusion matrix is 45, since there are 45 paintings per artist in the dataset.\\
-In generale possiamo vedere come la maggior parte dei quadri venga classficata nel modo corretto, con i colori della diagonale rossi e gialli, ossia maggiore di 30 su 45. 
+For the artists whose paints are often misclassified, we have noticed some common traits which follows.\\
+Some of them belong to movements such as surrealism, cubism or expressionism, thus their artifacts are not depicting real scenario (\textbf{esempi}), making them harder to classify.
+For example, Pablo Picasso, who founded the cubism movement, is the most misclassified artist (30 to 45).
+  
+The second reason leading to misclassification is the similarity  between different artists.\\
+The most striking example regards Ilya Repin, in fact the model has classified Boris Kustodiev as authors of 8 Repin's artworks. That's not so surprising since Repin was the Kustodiev's teacher, influencing significantly his style. (\textbf{example}).
 
-Nel dettaglio gli artisti che ottengono una precisione maggiore (44/45) sono Boudin, aivazovsky, kirchner. Ad esempio Ivan Aivazovsky produced many portraits and landscapes, over half of all of his paintings are realistic depictions of coastal scenes and seascapes. La caratteristica di dipengere scene o oggetti reali, rende la classificazione di questi quadri maggiormente simile all' iomage classification e dai risulati che abbiamo ottenuto notiamo che i pittori con quadri con queste caratteristiche ottengono una accuracy nella classficiazione migliore.
+Another reason concerning artists whose produced paints with different style between them, as we can see in figure \textbf{REF} where Van Gogh's artoworks are reported. This complicates furthermore the classification, leading to worse performance (accuracy on Van Gogh is 33 to 45).
 
-Negli aertisti che hanno ottenuto una accuracy piu' bassa abbiamo notato delle caratteristiche comuni. Alcuni di essi fanno parte di stili come il surrealismo, cubismo o espressionismo che li porta a reallizare quadri che non rappresentato la realta', quindi piu difficli da classificare; infatti pablo Picasso, il fondatore del cubismo, ottiene le performance peggiori (30/45). \\
-Un altro motivo che porta alla miss-classfication e' la somiglianza dei quadri tra diversi artisti. L'esempio piu' evidente lo si ha in Ilya Repin, infatti la rete ha predetto Kustodiev come l'artista di 8 quadri di Repin. Questo non e' un fatto cosi sorprendente in quanto Ilya Repin e' stato l'insegnate di Boris Kustodiev, influenzato notevolmente il suo stile.
-Un'ultima considerazione riguarda artisti che hanno prodotto quadri con stili molto diversi tra di loro, come possiamo vedere nella Figura X dove sono rappresentati due quadri di Van Gogh. Questo complica notevolmente la classificazione, portando in qualche caso a una accuracy non ottimale (Van Gogh 33/45)
-
-
-ANDAMENTI ACCURACY
-
-In figure \ref{fig:accscratch} vediamo l'andamento della top-1 acc sul training e validation set delle varie CNNs allenate from scratch. Ciò che si vede su tutte le reti è che le accuracy sul validation set e sul training set hanno andamenti simili, provando che i modelli non sono soggetti ad overfitting.\\
-Alla luce di ciò, con un dataset più vasto e un maggior numero di epoche, si potrebbero ottenere performance ancora migliori.
-
+In figure \ref{fig:accscratch}, for each CNN trained from scratch,  we report the top-1 accuracy trends on training and validation set. What we see is that both trends are very close each other, which proves a very low level of overfitting.
+From this fact, we deduce that with a wider dataset and an higher number of epochs, we could be obtained better performances. \textbf{Ce lo siamo chiesti e abbiamo sperimentato un aumento di epoche}.
 
 
-In figure \ref{fig:acctransfer} vediamo invece l'andamento della stessa metrica sulle reti allenate con transfer learning.  
-In tutte le reti, after few epochs, si nota un deciso incremento della pendenza. Questo corrisponde al momento in cui viene data la possibilità alla rete di aggiornarne non solo i pesi dei FC, ma anche di quelli di tutta la rete, come precedentemente esposto in \ref{ImplDet}. Da questo si intuisce che le reti pre-trained cercano di adattarsi all'artist identification.\\
 
-Si nota inoltre che Googlenet e resnext, dopo circa 10 epoche, sono affette dall'overfitting. Infatti si vede una progressiva crescita nella differenza fra le due accuracy. Questo ci fa capire che per queste due reti poteva bastare un numero minore di epoche.  Comunque sia i risultati ottenuti sono migliori di quelli dei related works.
+In figure \ref{fig:acctransfer}, instead, we see the trends for each CNN trained with transfer learning. In all of them, after few epochs, an increase in the trend's slope is noted. This corresponds to the moment where to the network is able to update not only the FC-layers' weights, but also for them of the whole network as previous explained in \ref{ImplDet}. So we can deduce that pre-trained CNNs are trying to adapt to artist identification task.
+
+Moreover, we can see that GoogLeNet and ResNeXt, aftew roughly 10 epochs, are affected by overfitting. In fact there's an incresing difference between test accuracy and validation accuracy, stating that fewer epochs could have been needed. \textbf{Comunque sia i risultati ottenuti sono migliori di quelli dei related works.}
 
 
 % Please add the following required packages to your document preamble:
@@ -267,6 +266,17 @@ Si nota inoltre che Googlenet e resnext, dopo circa 10 epoche, sono affette dall
 \end{table}
 
 
+\begin{figure}[htp]
+	
+	\centering
+	\includegraphics[width=.33\textwidth]{graphs/alex_scratch}\hfill
+	\includegraphics[width=.33\textwidth]{graphs/google_scratch}\hfill
+	\includegraphics[width=.33\textwidth]{graphs/res_scratch}
+	
+	\caption{default}
+	\label{fig:accscratch}
+	
+\end{figure}
 
 \begin{figure}[htp]
 	
@@ -280,17 +290,6 @@ Si nota inoltre che Googlenet e resnext, dopo circa 10 epoche, sono affette dall
 	
 \end{figure}
 
-\begin{figure}[htp]
-	
-	\centering
-	\includegraphics[width=.33\textwidth]{graphs/alex_scratch}\hfill
-	\includegraphics[width=.33\textwidth]{graphs/google_scratch}\hfill
-	\includegraphics[width=.33\textwidth]{graphs/res_scratch}
-	
-	\caption{default}
-	\label{fig:accscratch}
-	
-\end{figure}
 \begin{figure}
 	\centering
 	\includegraphics[width=0.8\linewidth]{graphs/confusion}
