Finish to add content

--- a/report.tex
+++ b/report.tex
@@ -52,9 +52,9 @@ Università di Padova \\
 
 \begin{abstract}
 	\textit{In this essay we present our work for the project of the Cognitive Services course.
-	The problem we face is the artist identification task, that is being able to recognize the author of a painting, given an image of it.\\
-	In order to resolve this task, we have exploited some differents Convolutional Neural Networks (CNNs) that come with \textit{Pytorch} library. Such networks have been trained in according to two distinct approaches: training them from scratch or exploiting pre-trained models using transfer learning technique. We used the \textit{Google Cloud Plataform} to train and evaluate our models.\\
-	What we have achieved is a set of results which are in line with the  state-of-the-art, confirming that CNNs are suitable to solve this type of task.}
+	The problem we face is the artist identification, that is being able to recognize the author of a painting, given an image of it. Our dataset consists of about 10.000 paintings of 23 different artists.
+	In order to resolve this task, we have exploited some famous Convolutional Neural Networks (CNNs), i.e. AlexNet, GoogLeNet and ResNeXt, that come with \textit{Pytorch} library. Those networks have been trained according to two distinct approaches: training them from scratch or exploiting pre-trained models using transfer learning technique. We used \textit{Google Cloud Platform} to train and evaluate our models.\\
+	What we have achieved is a set of results which are in line with the state-of-the-art, confirming that CNNs are suitable to solve this type of task.}
 \end{abstract}
 
 
@@ -63,13 +63,12 @@ Università di Padova \\
 
 
 \section{Introduction}
-\textbf{METTERE QUADRI ARTISTI (MAGARI STILI DIVERSI DELLO STESSO ARTISTA)}
 Artist identification is a task regarding recognition of the painter who depicted a certain painting, given an image of it.\\
-It's still nowadays a difficult problem to solve for the following reasons:
+It's still nowadays a difficult problem to solve, for the following reasons:
 \begin{itemize}
-	\item there are not many contributions yet and these rely on the latest models of deep learning (e.g. CNNs). 
-	\item The available datasets are not as large as those used by models which solve more common tasks such as object detection or face recognition.
-	\item An artist's style can change a lot through his works, or it could be influenced by other painters. For example, it is well known that Paul Cézanne and Camille Pissarro, who have spent a period of their lives together, have produced some works of similar style.
+	\item there are not many contributions yet and these rely on the latest models of deep learning (e.g. CNNs);  \textbf{SISTEMARE, USANO APPROCCI VECCHI}
+	\item the available datasets are not as large as those used by models which solve more common tasks, such as image classification;
+	\item an artist's style can change a lot through his works, or it could be influenced by other painters. \textbf{QUESTO RENDE LA CLASSIFICAZIONE UN TASK PARTICOLARMENTE COMPLICATO}
 \end{itemize}
 This type of task is still done by art experts and contributions to this type of problem can help and lead to the development of automatic fake artifact detection and automatic cataloguing of artworks.\\
 We used three different CNNs: AlexNet (2012), GoogLeNet (2014) and ResNeXt (2016). For each of them, we have established two different ways of training: from scratch and with transfer learning  upon pre-trained version of such CNNs. Then we have observed and compared their performance. From our experiment we have obtained 83.768\% accuracy.\\
@@ -275,10 +274,10 @@ For example, Pablo Picasso, who founded the cubism movement, is the most misclas
 The second reason leading to misclassification is the similarity  between different artists.\\
 The most striking example regards Ilya Repin, in fact the model has classified Boris Kustodiev as authors of 8 Repin's artworks. That's not so surprising since Repin was the Kustodiev's teacher, influencing significantly his style. (\textbf{example}).
 
-Another reason concerning artists whose produced paints with different style between them, as we can see in figure \textbf{REF} where Van Gogh's artoworks are reported. This complicates furthermore the classification, leading to worse performance (accuracy on Van Gogh is 33 to 45).
+Another reason concerning artists whose produced paints with different style between them, as we can see in figure \textbf{REF} where Van Gogh's artworks are reported. This complicates furthermore the classification, leading to worse performance (accuracy on Van Gogh is 33 to 45).
 
 In figure \ref{fig:accscratch}, for each CNN trained from scratch,  we report the top-1 accuracy trends on training and validation set. What we see is that both trends are very close each other, which proves a very low level of overfitting.
-From this fact, we deduce that with a wider dataset and an higher number of epochs, we could be obtained better performances. \textbf{Ce lo siamo chiesti e abbiamo sperimentato un aumento di epoche}.
+From this fact, we deduce that with a wider dataset and an higher number of epochs, we could be obtained better performances. For this reason, we have decided to test once our best network for 30 epochs. We didn't extend this kind of experiment to all networks due to our Google Cloud's limit resources. As we expected, ResNeXt's accuracy trend \textbf{kept increasing } without introducing overfitting, reaching 59\% top-1 and 81\% top-3 accuracy on test set.
 
 In figure \ref{fig:acctransfer}, instead, we see the trends for each CNN trained with transfer learning. In all of them, after few epochs, an increase in the trend's slope is noted. This corresponds to the moment where to the network is able to update not only the FC-layers' weights, but also for them of the whole network as previous explained in \ref{ImplDet}. So we can deduce that pre-trained CNNs are trying to adapt to artist identification task.
 
@@ -357,7 +356,7 @@ Moreover, we can see that GoogLeNet and ResNeXt, aftew roughly 10 epochs, are af
 
 \section{Conclusions and future works}\label{conclusions}
 In this essay we present the methods and approaches we have exploited to deal with artist identification. Once again we mark that it's a complex task, without lot of previous works. 
-In our work we were able to reach a top-1 final accuracy of 82\% using ResNeXt with transfer learning, pre-trained on ImageNet, outperforming traditional feature-based approaches by a significant margin\textbf{ I REALTED WORK SU QUESTO TASK O SIMILI. FORSE DA AGGIUNGERE RESNEXT FROM SCRATCH.}. From these results we think that a larger dataset, both for number of paintings and artists, would grant a significantly increment in accuracy, particularly in training from scratch.
+In our work we were able to reach a top-1 final accuracy of 82\% using ResNeXt with transfer learning, pre-trained on ImageNet, outperforming traditional feature-based approaches by a significant margin\textbf{ I REALTED WORK SU QUESTO TASK O SIMILI. FORSE DA AGGIUNGERE RESNEXT FROM SCRATCH.}. From these results we think that a larger dataset, both for number of paintings and artists, would allow a significantly increment in accuracy, particularly in training from scratch.
 
 In future work we would like to deal with a task that could be considered related to this, namely the recognition of forgeries in art, starting from our work. Our belief is that the representation of style and content crated by our networks would be a good starting point to create a system able to assign a value of authenticity to a painting, because we think that, though is possible to replicate precisely an artifact, the style of an artist is somehow unique and possibly captured by a CNN.
 
